# dfhash

./: Cargo.toml  README.md
.github/workflows/: release.yaml
fixtures/: a_base.csv.zst  a_base.hash  a_base.parquet  b_diff.csv  b_diff.csv.zst  b_diff.hash  b_diff.parquet  c_order.csv  d_nulls.csv  e_nulls_order.csv  e_nulls_order.hash  no_dataframe
src/: lib.rs  main.rs  main_tests.rs
