[package]
name = "dfhash"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
polars = { version = "0.45", features = [
    "lazy",
    "parquet",
    "csv",
    "dtype-full",
    "serde",
    "decompress-fast",
] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
rstest = "0.18"
tempfile = "3.10"
zstd = "0.13"
flate2 = "1.0"
regex = "1.10"
