[package]
name = "dfhash"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
polars-core = { version = "0.52", default-features = false, features = [
    "dtype-struct",
    "nightly",
    "performant",
    "simd",
] }
polars-io = { version = "0.52", default-features = false, features = [
    "decompress",
] }
polars-lazy = { version = "0.52", default-features = false, features = [
    "csv",
    "parquet",
    "new_streaming",
] }
polars-plan = { version = "0.52", default-features = false, features = ["cse"] }
polars-utils = { version = "0.52", default-features = false }
flate2 = "1.0"
zstd = "0.13"

sha2 = "0.10"
hex = "0.4"
mimalloc = { version = "0.1", default-features = false }


[dev-dependencies]
rstest = "0.18"
tempfile = "3.10"
regex = "1.10"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
